# OAMI

./: .gitignore  AGENTS.md  LICENSE  README.md  feature_importance.py  metrics_dashboard.py  requirements-dev.txt  requirements.txt  setup.cfg  tbm_factor_analysis.py  train_pipeline.py
.github/workflows/: tests.yml
configs/: config.yaml  logging_config.json
data/csv/day/: SPY.csv  SPY_options.csv
data/options/contracts/: SPY.csv
data/options/ohlcv/: SPY.csv
notebooks/: 00_data_ingestion_demo.ipynb  01_feature_engineering.ipynb  01_feature_importance.ipynb  02_advanced_features.ipynb
results/: account_value.csv  actions.csv  metrics_summary.json  tbm_feature_alpha.parquet  tbm_feature_mi.csv  tbm_feature_shap.csv  tbm_quantile_monotonicity.csv
src/: main.py
src/envs/: institutional_trading_env.py  order_trading_env.py
src/oami/: config.py  data_layer.py  dataset.py  features.py  features_advanced.py  features_crossasset.py  features_select.py  logging_config.py  options_features.py
src/oami/data_layer/: __init__.py  flatfiles.py  restapi.py  storage_manager.py
src/oami/envs/: __init__.py  institutional_trading_env.py  order_trading_env.py
src/oami/preprocessing/: __init__.py  custom_preprocessor.py  option_feature_builder.py
src/oami/utils/: cache_manager.py  decorators.py
src/oami/visualization/: __init__.py  (+1 more)
src/preprocessing/: custom_preprocessor.py
tests/: conftest.py  test_data_layer.py  test_dataset.py  test_features.py  test_fundamental_client.py  test_options_features.py
tests/resources/: market_sample.csv  options_sample.csv
(+2 files in other folders)
