[metadata]
name = oami
version = 0.3.0
author = You
description = Options-Aware Market Intelligence
license = MIT

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =
    polygon-api-client>=1.14.0
    pandas>=2.0.0
    numpy>=1.25.0
    python-json-logger>=2.0.7
    tqdm>=4.66.0
    requests>=2.31.0
    ta>=0.10.2
    xgboost>=2.0.0
    scikit-learn>=1.4.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
addopts = -ra -q --disable-warnings
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[coverage:run]
branch = True
source =
    src/oami

[coverage:report]
show_missing = True
skip_covered = True
fail_under = 75
